normalizacja uprawnień pracowników, uprawnienia, plik bazy

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body  {
 	font-size: 14px;
 	color: #635a52;
 	font-weight: 400;
-	background: #fff
+	background: #fff;
 	min-width: 1080px;
 }				
 #top_inner, #container, #footer > div {
